// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character reducer should return the initial state 1`] = `
Object {
  "instance": Object {
    "description": null,
    "id": null,
    "name": null,
    "thumbnail": Object {
      "path": "",
    },
  },
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the instance "LOAD_CHARACTER" 1`] = `
Object {
  "instance": undefined,
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the instance updated "UPDATE_CHARACTER" 1`] = `
Object {
  "character": Object {
    "description": null,
    "id": null,
    "name": "Testing",
    "thumbnail": Object {
      "path": "",
    },
  },
  "instance": Object {
    "description": null,
    "id": null,
    "name": null,
    "thumbnail": Object {
      "path": "",
    },
  },
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the itens "LISTING_CHARACTERS" 1`] = `
Object {
  "instance": Object {
    "description": null,
    "id": null,
    "name": null,
    "thumbnail": Object {
      "path": "",
    },
  },
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the series "LISTING_SERIES" 1`] = `
Object {
  "instance": Object {
    "description": null,
    "id": null,
    "name": null,
    "thumbnail": Object {
      "path": "",
    },
  },
  "itens": Array [],
  "series": undefined,
}
`;
